--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
                         up: glMatrix.vec3.fromValues(0.0, 1.0, 0.0)  // vector pointing in camera's up direction
                     },
                     models: [
-                        {
+                        {	
                             type: 'plane',
                             shader: 'color',
                             material: {
@@ -99,6 +99,7 @@
                         m.texture.url = new_scene.models[i].texture.url;
                         m.texture.scale = glMatrix.vec2.fromValues(new_scene.models[i].texture.scale[0],
                                                                    new_scene.models[i].texture.scale[1]);
+						m.texture.id = glapp.InitializeTexture(m.texture.url);
                     }
                     scene.models.push(m);
                 }
