--- a/index.html
+++ b/index.html
@@ -49,9 +49,41 @@
                         ambient: glMatrix.vec3.fromValues(0.1, 0.1, 0.1),  // red, green, blue
                         point_lights: [
                             {
-                                position: glMatrix.vec3.fromValues(1.5, 3.0, -4.5),  // x, y, z
+                                position: glMatrix.vec3.fromValues(-0.4, 1.6, -4.5),  // x, y, z
                                 color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
-                            }
+                            },
+							{
+								position: glMatrix.vec3.fromValues(0.4, 1.6, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(-0.6, 0.5, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(-0.4, 0.4, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(-0.2, 0.3, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(0.0, 0.2, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(0.2, 0.3, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(0.4, 0.4, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							},
+							{
+								position: glMatrix.vec3.fromValues(0.6, 0.5, -4.5),  // x, y, z
+                                color: glMatrix.vec3.fromValues(1.0, 1.0, 0.8)  // red, green, blue
+							}
                         ]
                     }
                 }
